--- a/subsonic-main/src/main/resources/net/sourceforge/subsonic/i18n/ResourceBundle_en.properties
+++ b/subsonic-main/src/main/resources/net/sourceforge/subsonic/i18n/ResourceBundle_en.properties
@@ -400,7 +400,7 @@ musicfoldersettings.nowscanning = The media folders are now being scanned. This 
 musicfoldersettings.scannow = Scan media folders now
 musicfoldersettings.fastcache = Fast access mode
 musicfoldersettings.fastcache.description = Use this option to minimize disk access, for instance if your media files are located on a network disk. \
-                                       Note: Changed or added files will only be visible after your media folders are scanned.
+                                       Note: Changes to files will only be visible after your media folders are scanned.
 musicfoldersettings.expunge = Clean-up database
 musicfoldersettings.expunge.description = Subsonic stores information about all media files ever encountered. By cleaning up the database, information about \
                                           files that are no longer in your media collection is permanently removed.
@@ -492,7 +492,7 @@ playersettings.coverart.off = Off
 playersettings.coverart.small = Small
 playersettings.coverart.medium = Medium
 playersettings.coverart.large = Large
-playersettings.notranscoder = <em>Notice:</em> Transcoders does not appear to be installed.<br>Click Help button for more information.
+playersettings.nolame = <em>Notice:</em> Transcoders does not appear to be installed.<br>Click Help button for more information.
 playersettings.autocontrol = Control player automatically
 playersettings.dynamicip = Player has dynamic IP address
 playersettings.transcodings = Active transcodings
@@ -524,7 +524,7 @@ sharesettings.expirein.never = never
 usersettings.title = Select user
 usersettings.newuser = New user
 usersettings.admin = User is administrator
-usersettings.settings = User is allowed to change personal settings and password
+usersettings.settings = User is allowed to change settings and password
 usersettings.stream = User is allowed to play files
 usersettings.jukebox = User is allowed to play files in jukebox mode
 usersettings.download = User is allowed to download files
